// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Search Form Default renders correctly 1`] = `
<test>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input"
        type="search"
      />
    </div>
    <button
      aria-label="Search"
      class="ecl-button ecl-button--search ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--search"
          />
        </svg>
      </span>
    </button>
  </form>
</test>
`;

exports[`EC - Search Form Default renders correctly with extra attributes 1`] = `
<test>
  <form
    class="ecl-search-form"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input"
        type="search"
      />
    </div>
    <button
      aria-label="Search"
      class="ecl-button ecl-button--search ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--search"
          />
        </svg>
      </span>
    </button>
  </form>
</test>
`;

exports[`EC - Search Form Default renders correctly with extra class names 1`] = `
<test>
  <form
    class="ecl-search-form custom-class custom-class--test"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input"
        type="search"
      />
    </div>
    <button
      aria-label="Search"
      class="ecl-button ecl-button--search ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--search"
          />
        </svg>
      </span>
    </button>
  </form>
</test>
`;

exports[`EC - Search Form Default renders correctly with extra form elements 1`] = `
<test>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input"
        type="search"
      />
    </div>
    <button
      aria-label="Search"
      class="ecl-button ecl-button--search ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        >
          Search
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#general--search"
          />
        </svg>
      </span>
    </button>
    <input
      id="custId"
      name="custId"
      type="hidden"
      value="1"
    />
  </form>
</test>
`;

exports[`EC - Search Form with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <form
    class="ecl-search-form"
    role="search"
  >
    <div
      class="ecl-form-group"
    >
      <label
        class="ecl-form-label ecl-search-form__label"
        for="search-input"
      >
        Search
      </label>
      <input
        class="ecl-text-input ecl-text-input--m ecl-search-form__text-input"
        id="search-input"
        type="search"
      />
    </div>
    <button
      aria-label="Search"
      class="ecl-button ecl-button--search ecl-search-form__button"
      type="submit"
    >
      <span
        class="ecl-button__container"
      >
        <span
          class="ecl-button__label"
          data-ecl-label="true"
        />
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-button__icon ecl-button__icon--after"
          data-ecl-icon=""
          focusable="false"
        >
          <use
            xlink:href="#general--search"
          />
        </svg>
        <!-- ecl2-compliance: icon -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            [icon] - {{ icon.name }} and {{ icon.path }} properties need to set and filled in.
          </p>
        </div>
      </span>
    </button>
    <!-- ecl2-compliance: button--search -->
    <div
      class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
    >
      <p
        class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
      >
        [button--search] - {{ label }} property needs to set and filled in.
      </p>
    </div>
  </form>
  <!-- ecl2-compliance: search-form -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [search-form] -  {{ button.label }} needs to be set and filled in. {{ button.icon_path }} needs to be set and filled in to render the search button icon.
    </p>
  </div>
</test>
`;
